packages/swc-plugin-workflow/transform/tests/errors/misspelled-workflow-directive/output-step.js
// This should error - misspelled directive
'use workflows';
export async function test() {
    return 42;
}
